--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,9 @@
 rootProject.name = 'AwesomeTSProject'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
+
+include ':react-native-splash-screen'   
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
+
 include ':app'
 includeBuild('../node_modules/react-native-gradle-plugin')
 
@@ -7,3 +11,4 @@ if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true")
     include(":ReactAndroid")
     project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
 }
+ 
